unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__AllowRebilling__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__AllowRebilling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the credit note allows rebilling.</description>
    <inlineHelpText>Indicates that the credit note allows rebilling. Do not edit this checkbox. It is set by the Convert to Credit Note process.</inlineHelpText>
    <label>Allow Rebilling</label>
    <type>Checkbox</type>
</CustomField>