unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__AnalysisItem2__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__AnalysisItem2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
    <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
    <label>Analysis Item 2</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>fferpcore__AnalysisItem__c.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
    <relationshipLabel>Related Documents 2</relationshipLabel>
    <relationshipName>RelatedDocuments2</relationshipName>
    <type>Lookup</type>
</CustomField>