unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingCountry__c</fullName>
    <label>Billing Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>