unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingPostalCode__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>