unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__BillingState__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingState__c</fullName>
    <label>Billing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>