unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingStreet__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>