unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__CreditNoteReason__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CreditNoteReason__c</fullName>
    <description>Reason for the credit note. Can also be set on negative invoices.</description>
    <inlineHelpText>Reason for the credit note. Can also be set on negative invoices.</inlineHelpText>
    <label>Credit Note Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Goods</fullName>
            </value>
            <value>
                <fullName>Goods Returned</fullName>
            </value>
            <value>
                <fullName>Incorrect Shipment</fullName>
            </value>
            <value>
                <fullName>Overcharge</fullName>
            </value>
            <value>
                <fullName>Retrospective Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>