unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CustomerReference__c</fullName>
    <description>External customer reference.</description>
    <inlineHelpText>External customer reference.</inlineHelpText>
    <label>Customer Reference</label>
    <type>TextArea</type>
</CustomField>