unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__DiscountTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DiscountTotal__c</fullName>
    <description>The total discount of all billing document line items associated with this billing document.</description>
    <inlineHelpText>The total saving of all billing document line items associated with this billing document.</inlineHelpText>
    <label>Discount Total</label>
    <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__DiscountTotal__c</summarizedField>
    <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>