unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DocumentDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date on which the document was created.</description>
    <inlineHelpText>Date on which the document was created.</inlineHelpText>
    <label>Document Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>