unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__DocumentSource__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DocumentSource__c</fullName>
    <description>Indicates where this billing document originates from.</description>
    <inlineHelpText>Indicates where this billing document originates from.</inlineHelpText>
    <label>Document Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>