unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__DocumentTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DocumentTotal__c</fullName>
    <description>Total value of all the billing document line items on this billing document.</description>
    <inlineHelpText>Total value of all the billing document line items on this billing document.</inlineHelpText>
    <label>Document Total</label>
    <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__TotalValue__c</summarizedField>
    <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>