unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__DocumentTypePrefix__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DocumentTypePrefix__c</fullName>
    <formula>IF(ISPICKVAL(fferpcore__DocumentType__c, "Credit Note"), "CRN", "INV")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type Prefix</label>
    <type>Text</type>
</CustomField>