unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__Engagement__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Engagement this billing document relates to.</description>
    <inlineHelpText>Engagement this billing document relates to.</inlineHelpText>
    <label>Engagement</label>
    <referenceTo>fferpcore__ff_Engagement__c</referenceTo>
    <relationshipLabel>Billing Documents</relationshipLabel>
    <relationshipName>BillingDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>