unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ExternalDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ExternalDocumentNumber__c</fullName>
    <externalId>true</externalId>
    <label>External Document Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>