unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__FooterText__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FooterText__c</fullName>
    <description>Text to be shown at the end of printed billing documents.</description>
    <inlineHelpText>Text to be shown at the end of printed billing documents.</inlineHelpText>
    <label>Footer Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>