unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__HeaderText__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__HeaderText__c</fullName>
    <description>Text to be shown at the start of printed billing documents.</description>
    <inlineHelpText>Text to be shown at the start of printed billing documents.</inlineHelpText>
    <label>Header Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>