unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__IsBillingAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
    <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
    <formula>NOT
            ( ISBLANK(fferpcore__BillingStreet__c) &amp;&amp;
              ISBLANK(fferpcore__BillingCity__c) &amp;&amp;
              ISBLANK(fferpcore__BillingState__c) &amp;&amp;
              ISBLANK(fferpcore__BillingPostalCode__c) &amp;&amp;
              ISBLANK(fferpcore__BillingCountry__c)
            ) &amp;&amp;
            ( fferpcore__BillingStreet__c  =  fferpcore__ValidatedBillingStreet__c ) &amp;&amp;
            ( fferpcore__BillingCity__c =  fferpcore__ValidatedBillingCity__c ) &amp;&amp;
            ( fferpcore__BillingState__c =  fferpcore__ValidatedBillingState__c ) &amp;&amp;
            ( fferpcore__BillingPostalCode__c =  fferpcore__ValidatedBillingPostalCode__c ) &amp;&amp;
            ( fferpcore__BillingCountry__c =  fferpcore__ValidatedBillingCountry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
    <label>Billing Address Validated</label>
    <type>Checkbox</type>
</CustomField>