unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsComplete__c</fullName>
    <formula>ISPICKVAL(fferpcore__DocumentStatus__c, "Complete")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>