unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__NetTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__NetTotal__c</fullName>
    <description>The total net value of all billing document line items associated with this billing document.</description>
    <inlineHelpText>The total net value of all billing document line items associated with this billing document.</inlineHelpText>
    <label>Net Total</label>
    <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__NetValue__c</summarizedField>
    <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>