unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ShippingAccountName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShippingAccountName__c</fullName>
    <description>Name of the account to appear on the billing document as the Shipping Account.</description>
    <inlineHelpText>Name of the account to appear on the billing document as the Shipping Account.</inlineHelpText>
    <label>Shipping Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>