unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShippingCountry__c</fullName>
    <label>Shipping Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>