unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShippingPostalCode__c</fullName>
    <label>Shipping Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>