unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShippingStreet__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>