unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__TaxPointDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxPointDate__c</fullName>
    <description>The date to use for tax calculation purposes if different from Document Date.</description>
    <inlineHelpText>The date to use for tax calculation purposes if different from Document Date.</inlineHelpText>
    <label>Tax Point Date</label>
    <type>Date</type>
</CustomField>