unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ValidatedBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
    <description>Billing address country validated by the external tax calculation service.</description>
    <label>Validated Billing Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>