unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ValidatedBillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
    <description>Billing address postal code validated by the external tax calculation service.</description>
    <label>Validated Billing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>