unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ValidatedShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
    <description>Shipping address country validated by the external tax calculation service.</description>
    <label>Validated Shipping Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>