unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ValidatedShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
    <description>Shipping address postal code validated by the external tax calculation service.</description>
    <label>Validated Shipping Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>