unpackaged/main/default/objects/fferpcore__BillingDocument__c/fields/pse__Billing_Event_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event_Correlation_Id__c</fullName>
    <description>Records the PSA Billing Event correlation key used within the Foundations system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Records the PSA Billing Event correlation key used within the Foundations system.</inlineHelpText>
    <label>Billing Event Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>